src/test/ui/underscore-lifetime/where-clause-inherent-impl-ampersand.rust2015.stderr
error[E0637]: `&` without an explicit lifetime name cannot be used here
  --> $DIR/where-clause-inherent-impl-ampersand.rs:13:17
   |
LL |     T: WithType<&u32>
   |                 ^ explicit lifetime name needed here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0637`.
